storage: expand write batch by decoding it admin ui: add precise nanosecond times to expanded sample html titles admin ui: pick out exact component span instead of assuming first span is component span admin ui: fix bug in overlap algorithm for spans so spans whose duraton exceeds parent overlap
Release note: None

--- a/pkg/ui/src/views/reports/containers/components/expanded_sample.styl
+++ b/pkg/ui/src/views/reports/containers/components/expanded_sample.styl
@@ -53,6 +53,7 @@
 #matrix #sample-trace .log.component-span
   font-weight bold
   text-decoration underline solid
+  cursor pointer
 
 #matrix #sample-trace .log.span
   text-decoration underline dotted
